--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../GestureControlledCamera.apk"
+export_path=""
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -25,8 +25,8 @@ custom_template/use_custom_build=false
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name="com.FedericoCiuffardi.GestureControlledCamera"
-package/name="GestureControlledCamera"
+package/unique_name="org.godotengine.GCC2D"
+package/name="GCC2D"
 package/signed=true
 screen/immersive_mode=true
 screen/orientation=0
